// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button will a pillShaped shape to match snapshot 1`] = `
<button
  className="sc-bdfCDU eMuXTf"
  color="color.white"
  cursor="pointer"
  disabled={false}
  display="flex"
  filter="brightness(1)"
  
  fontWeight={600}
  letterSpacing={1.25}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  transform=""
  width="fit-content"
>
  <div
    className="sc-bdfCDU dpBfNq"
    display="flex"
  >
    Pill Shape
  </div>
</button>
`;

exports[`Button with an icon on the left to match snapshot 1`] = `
<button
  className="sc-bdfCDU eSlpEH"
  color="color.white"
  cursor="pointer"
  disabled={false}
  display="flex"
  filter="brightness(1)"
  
  fontWeight={600}
  letterSpacing={1.25}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  transform=""
  width={144}
>
  <div
    className="sc-bdfCDU dpBfNq"
    display="flex"
  >
    <div
      className="sc-bdfCDU dMZcpT"
      display="flex"
      height="24px"
      width="24px"
    >
      <svg
        fill="#ffffff"
        height="24px"
        id="Capa_1"
        version="1.1"
        viewBox="0 0 197.516 197.516"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="SVGRepo_bgCarrier"
          strokeWidth="0"
        />
        <g
          id="SVGRepo_tracerCarrier"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
        <g
          id="SVGRepo_iconCarrier"
        >
          <path
            d="M68.758,170.083V72.649h15v97.434H68.758z M128.758,72.649h-15v97.434h15V72.649z M140.539,0v12.631h34.885v47.746h-10.525 v137.139H32.617V60.377H22.092V12.631h34.883V0H140.539z M149.898,60.377H47.617v122.139h102.281V60.377z M125.539,27.631V15H71.975 v12.631H37.092v17.585h123.332V27.631H125.539z"
          />
        </g>
      </svg>
    </div>
    Delete
  </div>
</button>
`;

exports[`Button with an icon on the right to match snapshot 1`] = `
<button
  className="sc-bdfCDU eSlpEH"
  color="color.white"
  cursor="pointer"
  disabled={false}
  display="flex"
  filter="brightness(1)"
  
  fontWeight={600}
  letterSpacing={1.25}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  transform=""
  width={144}
>
  <div
    className="sc-bdfCDU dpBfNq"
    display="flex"
  >
    Delete
    <div
      className="sc-bdfCDU dMZcpT"
      display="flex"
      height="24px"
      width="24px"
    >
      <svg
        fill="#ffffff"
        height="24px"
        id="Capa_1"
        version="1.1"
        viewBox="0 0 197.516 197.516"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="SVGRepo_bgCarrier"
          strokeWidth="0"
        />
        <g
          id="SVGRepo_tracerCarrier"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
        <g
          id="SVGRepo_iconCarrier"
        >
          <path
            d="M68.758,170.083V72.649h15v97.434H68.758z M128.758,72.649h-15v97.434h15V72.649z M140.539,0v12.631h34.885v47.746h-10.525 v137.139H32.617V60.377H22.092V12.631h34.883V0H140.539z M149.898,60.377H47.617v122.139h102.281V60.377z M125.539,27.631V15H71.975 v12.631H37.092v17.585h123.332V27.631H125.539z"
          />
        </g>
      </svg>
    </div>
  </div>
</button>
`;
